# speedtest-monitor

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  bootstrap.py  pyproject.toml
application/: __init__.py
commands/: __init__.py  take_measurement.py
configuration/: __init__.py
filterers/: __init__.py
models/: __init__.py
repository/: __init__.py
schemas/: __init__.py
templates/: graph.html
