[tool.poetry]
name = "speedtest-monitor"
version = "0.1.0"
description = ""
authors = ["Pedro Calleja <pecalleja@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
marshmallow = "^3.7.1"
Flask-SQLAlchemy = "^2.4.4"
flask-injector = "^0.12.3"
python-dateutil = "^2.8.1"
delorean = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pre-commit = "^2.7.1"
pytest-flask-sqlalchemy = "^1.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
